# streamgraph

./: .env.example  .gitignore  Dockerfile.generator  Dockerfile.pipeline  Makefile  README.md  docker-compose.yml  pyproject.toml
benchmarks/: bench_pipeline.py  bench_union_find.py
config/: prometheus.yml
config/grafana/dashboards/: dashboards.yml  streamgraph.json
docs/: architecture.md
feast/: entities.py  feature_services.py  feature_store.yaml  feature_views.py
generator/: fraud_ring_generator.py
scripts/: confirm_fraud.py  setup_kafka_topics.sh
src/streamgraph/: config.py
src/streamgraph/connectors/: kafka_sink.py  kafka_source.py
src/streamgraph/domain/: models.py
src/streamgraph/graph/: union_find.py
src/streamgraph/operators/: alert_sink.py  deduplication.py  entity_resolution.py  feature_computation.py  feature_enrichment.py  fraud_confirmation.py  fraud_label_store.py  risk_scorer.py
src/streamgraph/pipeline/: fraud_detection.py
tests/: conftest.py
tests/unit/: test_domain_models.py  test_feature_computation.py  test_fraud_confirmation.py  test_fraud_label_store.py  test_generator.py  test_risk_scorer.py  test_union_find.py
